--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "jest"
+    "test": "jest",
+    "semantic-release": "semantic-release"
   },
   "devDependencies": {
     "@types/node": "18.14.6",
     "aws-cdk-lib": "^2.0.0",
     "constructs": "^10.0.0",
-    "typescript": "~4.9.5"
+    "typescript": "~4.9.5",
+    "semantic-release": "^21.0.1"
   },
   "peerDependencies": {
     "aws-cdk-lib": "^2.0.0",
